[package]
name = "agentflow-memory"
version = "0.1.0"
description = "Session and long-term memory management for AgentFlow agents"
keywords = ["ai", "agents", "memory", "llm"]
categories = ["development-tools"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tracing = "0.1"
agentflow-rag = { path = "../agentflow-rag", version = "0.3.0-alpha", default-features = false }
# P10.7.2: encryption-at-rest for the preference layer. Single-user
# X25519 identity, no cloud KMS dependency. Pinned at 0.11 (current
# stable as of 2026-05).
age = "0.11"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
