[package]
name = "agentflow-nodes"
version = "0.1.0"
edition = "2021"
authors = ["yuxuetr"]
description = "Built-in node implementations for AgentFlow workflows"
license = "MIT"
keywords = ["ai", "workflow", "nodes", "llm"]
categories = ["development-tools"]

[features]
default = ["llm", "http", "file", "template"]
llm = []
http = ["reqwest"]
file = []
template = ["handlebars"]
batch = []
conditional = []
factories = []

[dependencies]
# Core dependency - all nodes build on top of agentflow-core
agentflow-core = { path = "../agentflow-core" }

# LLM integration - required for real model execution
agentflow-llm = { path = "../agentflow-llm" }

# Removed: agentflow-config dependency to break circular dependency

# HTTP client for HTTP node
reqwest = { version = "0.11", features = ["json"], optional = true }

# Template engines for template node
handlebars = { version = "4.0", optional = true }
tera = "1.19"

# Core serialization and async support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
mime_guess = "2.0"

# MarkMap and Arxiv node dependencies
flate2 = "1.0"
tar = "0.4"
regex = "1.0"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
tempfile = "3.3"

# Examples demonstrating real LLM model calling

