[package]
name = "agentflow-nodes"
version = "0.2.0"
description = "Built-in node implementations for AgentFlow workflows"
keywords = ["ai", "workflow", "nodes", "llm"]
categories = ["development-tools"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["llm", "http", "file", "template"]
llm = []
http = ["reqwest"]
file = []
template = ["handlebars"]
batch = []
conditional = []
mcp = ["agentflow-mcp"]
rag = ["agentflow-rag"]

[dependencies]
# Core dependency - all nodes build on top of agentflow-core
agentflow-core = { path = "../agentflow-core", version = "0.2" }

# LLM integration - required for real model execution
agentflow-llm = { path = "../agentflow-llm", version = "0.2" }

# MCP integration - optional for MCP tool calling
agentflow-mcp = { path = "../agentflow-mcp", version = "0.2", optional = true }

# RAG integration - optional for RAG operations
agentflow-rag = { path = "../agentflow-rag", version = "0.3.0-alpha", optional = true }

# Removed: agentflow-config dependency to break circular dependency

# HTTP client for HTTP node
reqwest = { version = "0.12", features = ["json", "default-tls"], optional = true }

# Template engines for template node
handlebars = { version = "4.0", optional = true }
tera = "1.19"

# Core serialization and async support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
mime_guess = "2.0"

# MarkMap and Arxiv node dependencies
flate2 = "1.0"
tar = "0.4"
regex = "1.0"
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
tempfile = "3.3"
# P10.2.1: per-node latency benches sit alongside the existing
# scheduler benches under benches/. `async_tokio` lets each
# benchmark take a tokio runtime via `.to_async(&rt)`.
criterion = { version = "0.5", features = ["async_tokio"] }

# Examples demonstrating real LLM model calling

[[bench]]
name = "node_latency"
harness = false
# `conditional` isn't in the default feature set, but the bench
# covers it; tag the requirement so `cargo bench -p agentflow-nodes
# --bench node_latency` auto-enables it and any orchestrator (CI,
# bench-gate) gets a deterministic build target.
required-features = ["conditional"]
