[package]
name = "agentflow-nodes"
version = "0.2.0"
description = "Built-in node implementations for AgentFlow workflows"
keywords = ["ai", "workflow", "nodes", "llm"]
categories = ["development-tools"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
# Q3.8.5: the actual feature gate matrix.
#
# - `llm` / `http` / `file` / `template` are the default-on
#   workflow nodes. Some only gate the module `pub mod ...` in
#   `nodes/mod.rs`, others additionally gate transitive deps
#   (`reqwest` for `http`, `handlebars` for `template`). `llm` and
#   `file` are empty placeholders that only gate `pub use` re-
#   exports today — kept for symmetry with the documented default
#   set; pruning them is a breaking API change.
# - `batch` / `conditional` opt-in.
# - `mcp` / `rag` opt-in; these pull substantial transitive deps.
#
# Heavy AI-modality nodes (asr / tts / text_to_image /
# image_to_image / image_edit / image_understand) and the
# specialized content nodes (arxiv, markmap) ship in the base
# crate without per-feature gates. The audit (`docs/audit/
# agentflow-nodes.md` M7) flagged this; the trade-off considered
# in Q3.8.5 was:
#   - Add 8 feature flags + matrix CI rows for a marginal binary-
#     size win (agentflow-llm itself is still a hard dep, so the
#     transitive footprint barely shrinks), OR
#   - Document the intentional shape and pin it with a regression
#     test so the doc-vs-code drift cannot silently reappear.
# CLAUDE.md (Q4.5) + this comment + the `feature_gate_pin_tests`
# module take the second path. If a future contributor *does*
# decide to gate one of these modalities, they must update
# CLAUDE.md, this comment, and the pin test in lockstep.
# P-A (RFC_NODES_DECOMPOSITION): the capability-backed nodes (and their
# `mcp` / `rag` / `llm` features + deps) moved to `agentflow-nodes-ai`. This
# tool-tier crate keeps only `http` / `file` / `template` / `batch` /
# `conditional` / `arxiv` / `markmap`, with no capability dependencies.
default = ["http", "file", "template"]
http = ["reqwest"]
file = []
template = ["handlebars"]
batch = []
conditional = []

[dependencies]
# Core dependency - all nodes build on top of agentflow-core
agentflow-core = { path = "../agentflow-core", version = "0.2" }

# Tool integration - FileNode and HttpNode delegate to agentflow-tools'
# sandbox-aware FileTool / HttpTool so the workflow node surface inherits
# path traversal / symlink / SSRF / private-IP defenses for free.
# Added under Q1.3.1 / Q1.3.2 to close the policy-bypass found in the
# 2026-05-24 audit (agentflow-nodes.md C2 + C3).
agentflow-tools = { path = "../agentflow-tools", version = "0.1" }

# Removed: agentflow-config dependency to break circular dependency

# HTTP client for HTTP node
reqwest = { version = "0.12", features = ["json", "default-tls"], optional = true }

# Template engines for template node
handlebars = { version = "4.0", optional = true }
tera = "1.19"

# Core serialization and async support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
mime_guess = "2.0"

# MarkMap and Arxiv node dependencies
flate2 = "1.0"
tar = "0.4"
regex = "1.0"
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
tempfile = "3.3"
# P10.2.1: per-node latency benches sit alongside the existing
# scheduler benches under benches/. `async_tokio` lets each
# benchmark take a tokio runtime via `.to_async(&rt)`.
criterion = { version = "0.5", features = ["async_tokio"] }

# Examples demonstrating real LLM model calling

[[bench]]
name = "node_latency"
harness = false
# `conditional` isn't in the default feature set, but the bench
# covers it; tag the requirement so `cargo bench -p agentflow-nodes
# --bench node_latency` auto-enables it and any orchestrator (CI,
# bench-gate) gets a deterministic build target.
required-features = ["conditional"]
