[package]
name = "agentflow-rag"
version = "0.3.0-alpha"
description = "Retrieval-Augmented Generation (RAG) system for AgentFlow"
keywords = ["rag", "vector-database", "embeddings", "semantic-search", "ai"]
categories = ["algorithms", "database", "text-processing"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["qdrant"]
qdrant = ["dep:qdrant-client"]
local-embeddings = ["dep:ort", "dep:ndarray", "dep:tokenizers"]
pdf = ["dep:pdf-extract"]
html = ["dep:scraper"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"

# HTTP client for API-based embeddings
reqwest = { version = "0.12", features = ["json", "default-tls"] }

# Vector databases
qdrant-client = { version = "1.11", optional = true }

# Text processing
unicode-segmentation = "1.11"
regex = "1.10"

# Document processing
pdf-extract = { version = "0.7", optional = true }
scraper = { version = "0.19", optional = true }
csv = "1.3"

# Local embeddings (optional)
ort = { version = "2.0.0-rc.10", features = ["download-binaries"], optional = true }
ndarray = { version = "0.15", optional = true }
tokenizers = { version = "0.19", optional = true, default-features = false, features = ["onig"] }

# Utilities
futures = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# Retry logic
tokio-retry = "0.3"

[dev-dependencies]
tempfile = "3.8"
proptest = "1.4"
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
criterion = "0.5"

[[bench]]
name = "retrieval"
harness = false
