[package]
name = "agentflow-server"
version = "0.1.0"
edition = "2024"
authors = ["AgentFlow Contributors"]
description = "Axum-based Gateway server for AgentFlow"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = { version = "0.1", features = ["sync"] }
dirs = "5.0"
prost = "0.13"
tonic = "0.12"

# Workspace dependencies
agentflow-db = { path = "../agentflow-db" }
agentflow-core = { path = "../agentflow-core" }
agentflow-cli = { path = "../agentflow-cli" }
agentflow-skills = { path = "../agentflow-skills" }
agentflow-viz = { path = "../agentflow-viz" }
agentflow-tracing = { path = "../agentflow-tracing" }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
futures = "0.3"
