[package]
name = "agentflow-server"
version = "0.1.0"
edition = "2024"
authors = ["AgentFlow Contributors"]
description = "Axum-based Gateway server for AgentFlow"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = { version = "0.1", features = ["sync"] }
dirs = "5.0"
prost = "0.13"
tonic = "0.12"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
# P10.16.1: signed-JWT worker admission. HS256 (single shared secret) + RS256
# (asymmetric — operator-signed, worker-verifying — for the production IdP path).
jsonwebtoken = "9.3"
# P10.14.2-FU1: Prometheus `/metrics` endpoint emission. `metrics` is the
# facade (fire-and-forget `counter!()` / `histogram!()` macros from any
# production code path); `metrics-exporter-prometheus` provides the
# recorder that aggregates them into the Prometheus text format the
# Grafana dashboards (`dashboards/grafana/agentflow-overview.json`)
# expect to scrape.
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false }

# Workspace dependencies
agentflow-db = { path = "../agentflow-db" }
agentflow-core = { path = "../agentflow-core" }
agentflow-cli = { path = "../agentflow-cli" }
agentflow-skills = { path = "../agentflow-skills" }
agentflow-tracing = { path = "../agentflow-tracing" }
agentflow-tools = { path = "../agentflow-tools" }
agentflow-harness = { path = "../agentflow-harness" }
agentflow-agents = { path = "../agentflow-agents" }
agentflow-llm = { path = "../agentflow-llm" }
agentflow-memory = { path = "../agentflow-memory" }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
futures = "0.3"
tempfile = "3"
urlencoding = "2"
