[package]
name = "agentflow-skills"
version = "0.1.0"
edition = "2021"
authors = ["AgentFlow Contributors"]
description = "Skill system for AgentFlow — declarative skill manifests that wire LLM persona, tools, knowledge and memory into a runnable agent"
license = "MIT"
keywords = ["ai", "agents", "skills", "llm"]
categories = ["development-tools"]

[dependencies]
agentflow-agents  = { path = "../agentflow-agents" }
agentflow-tools   = { path = "../agentflow-tools" }
agentflow-memory  = { path = "../agentflow-memory" }
agentflow-rag     = { path = "../agentflow-rag", default-features = false }
agentflow-mcp     = { path = "../agentflow-mcp" }

async-trait = "0.1"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
serde_yaml  = "0.9"
toml        = "0.8"
thiserror   = "1.0"
tokio       = { version = "1.0", features = ["full"] }
tracing     = "0.1"
dirs        = "5.0"
glob        = "0.3"
semver      = "1"
sha2        = "0.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
