[package]
name = "agentflow-skills"
version = "0.1.0"
edition = "2024"
authors = ["AgentFlow Contributors"]
description = "Skill system for AgentFlow — declarative skill manifests that wire LLM persona, tools, knowledge and memory into a runnable agent"
license = "MIT"
keywords = ["ai", "agents", "skills", "llm"]
categories = ["development-tools"]

[dependencies]
agentflow-agents  = { path = "../agentflow-agents", version = "0.2" }
agentflow-tools   = { path = "../agentflow-tools", version = "0.1" }
agentflow-memory  = { path = "../agentflow-memory", version = "0.1" }
agentflow-rag     = { path = "../agentflow-rag", version = "0.3.0-alpha", default-features = false }
agentflow-mcp     = { path = "../agentflow-mcp", version = "0.2" }

async-trait = "0.1"
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
serde_yaml  = "0.9"
toml        = "0.8"
regex       = "1"
thiserror   = "1.0"
tokio       = { version = "1.0", features = ["full"] }
tracing     = "0.1"
dirs        = "5.0"
glob        = "0.3"
semver      = "1"
sha2        = "0.10"
reqwest     = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
tar = "0.4"
flate2 = "1.0"
