[package]
name = "agentflow-tools"
version = "0.1.0"
edition = "2021"
authors = ["AgentFlow Contributors"]
description = "Unified tool abstraction and built-in tools for AgentFlow agents"
license = "MIT"
keywords = ["ai", "agents", "tools", "llm"]
categories = ["development-tools"]

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
