[package]
name = "agentflow-tools"
version = "0.1.0"
description = "Unified tool abstraction and built-in tools for AgentFlow agents"
keywords = ["ai", "agents", "tools", "llm"]
categories = ["development-tools"]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "default-tls"] }
tracing = "0.1"
url = "2.5"
jsonschema = "0.17"
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
seccompiler = "0.5"
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
