[package]
name = "agentflow-tracing"
version = "0.1.0"
edition = "2021"
authors = ["AgentFlow Team"]
description = "Workflow execution tracing and logging for AgentFlow"
license = "MIT"

[dependencies]
# Core dependencies
agentflow-core = { path = "../agentflow-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Storage backends (optional features)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "json", "chrono"], optional = true }

[features]
default = []
postgres = ["sqlx"]

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
