[package]
name = "agentflow-viz"
version = "0.1.0"
edition = "2021"
authors = ["yuxuetr"]
description = "Workflow visualization for AgentFlow - supports Mermaid, Graphviz DOT, and JSON output"
license = "MIT"

[features]
default = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
