[package]
name = "agentflow-worker-proto"
version = "0.1.0"
description = "Shared worker control-plane contract: WorkerProtocol, wire types, and the gRPC client (worker <-> server)"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
build = "build.rs"

[build-dependencies]
# Generates `OUT_DIR/agentflow.scheduler.v1.rs` (message structs only;
# the tower service stays hand-written in `agentflow-server`).
tonic-build = { version = "0.12", default-features = false, features = ["prost"] }

[dependencies]
# `FlowValue` for `NodeExecutionPayload`; trace-context for gRPC traceparent.
agentflow-value = { path = "../agentflow-value", version = "0.1" }
agentflow-tracing = { path = "../agentflow-tracing", version = "0.1" }

async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["sync", "rt", "macros", "time"] }
tonic = "0.12"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
