[package]
name = "agentflow-worker"
version = "0.1.0"
description = "Distributed worker process for AgentFlow"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
agentflow-core = { path = "../agentflow-core", version = "0.2" }
# P2.8 — enable the `mcp` feature so the worker can dispatch `mcp` payloads
# via the same `MCPNode` the local scheduler uses; default features cover
# `llm` / `http` / `file` / `template`.
agentflow-nodes = { path = "../agentflow-nodes", version = "0.2", features = ["mcp"] }
agentflow-llm = { path = "../agentflow-llm", version = "0.2" }
agentflow-agents = { path = "../agentflow-agents", version = "0.2" }
agentflow-memory = { path = "../agentflow-memory", version = "0.1" }
agentflow-tools = { path = "../agentflow-tools", version = "0.1" }
agentflow-server = { path = "../agentflow-server", version = "0.1" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
anyhow = "1"
serde_yaml = "0.9"
tonic = "0.12"
