[package]
name = "paper-assistant"
version = "0.1.0"
edition = "2021"
description = "AI Agent for comprehensive arXiv paper processing with Chinese translation and mind mapping"

[[bin]]
name = "paper-assistant"
path = "src/main.rs"

[dependencies]
# AgentFlow dependencies
agentflow-core = { path = "../../../agentflow-core" }
agentflow-llm = { path = "../../../agentflow-llm" }
agentflow-nodes = { path = "../../../agentflow-nodes", features = ["llm", "http", "file"] }
agentflow-agents = { path = "../.." }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP and networking
reqwest = { version = "0.11", features = ["json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# File I/O and paths
uuid = { version = "1.0", features = ["v4"] }

# Text processing
regex = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"