[package]
name = "paper-research-analyzer"
version = "0.1.0"
edition = "2021"
authors = ["AgentFlow Contributors"]
description = "PDF research paper analysis agent using AgentFlow"
license = "MIT"

[[bin]]
name = "paper-research-analyzer"
path = "src/main.rs"

[dependencies]
# AgentFlow dependencies
agentflow-core = { path = "../../../agentflow-core" }
agentflow-llm = { path = "../../../agentflow-llm" }
agentflow-agents = { path = "../.." }

# Agent-specific dependencies
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"